--- a/SinglePage/templates/cards/start.html
+++ b/SinglePage/templates/cards/start.html
@@ -1,24 +1,21 @@
 <div class="card-header text-white">
-    Welcome to our study!
+    Participation information
 </div>
 <div class="card-body">
     <p class="card-text">
-        <b>Participation information</b><br><br>
-        Thank you for participating in our study. In this study, we would like to measure cognitive ability of our participants
-        and how they feel about performing the tasks.
-        This study consists of two parts. In each you have to solve 8 Cognitive Ability Tasks, followed by a questionnaire.
-        It will take you around XYZ min.<br><br>
+        Thank you for participating in our study. In this survey, we would like to measure your cognitive abilities
+        and our experience while performing the tasks.
+        This survey consists of two parts. In each part, you have to solve 8 cognitive ability tasks, followed by a questionnaire.
+        It will take about XYZ minutes to complete the survey. The goal of the study is to identify XYZ.<br><br>
 
-        Your data will be stored and processed anonymously only. More information on data protection can be
-        found in the legal notice. This study is conducted by Julia Schulz as part of her master thesis
-        at DFKI (German Research Center for Artificial Intelligence) and UdS (Saarland University). For
-        questions or comments, contact us at:<br>
-        <b>s8juschu@stud.uni-saarland.de</b><br><br>
+        Your data will be stored and processed anonymously.
+        More information on data protection can be found in the <a href="#" data-toggle="modal" data-target="#exampleModal">Data Protection Notice</a>.
+        This survey is being conducted by Julia Schulz as part of a master's thesis at Saarland University.<br><br>
 
         <b>Notes on data protection and participation information:</b><br>
     <div class="form-check">
         <input type="checkbox" class="form-check-input" id="checkbox" autocomplete="off"> I have read and understood the
-        information on data protection and the participation information and agree
+        <a href="#" data-toggle="modal" data-target="#exampleModal">notes on data protection</a> and the participation information and agree
         that my data may be used anonymously for scientific research purposes. <br>
     </div>
 
