--- a/SinglePage/templates/cards/imi_pre.html
+++ b/SinglePage/templates/cards/imi_pre.html
@@ -1,50 +1,95 @@
-<div class="card-header text-white">
-    IMI
-</div>
-<div class="progress">
-    <div class="progress-bar" role="progressbar" aria-valuenow="0"
-         aria-valuemin="0" aria-valuemax="100" style="width:0%">
-        <div class="progress-text" style="margin-left: 4px">0%</div>
+<div class="container" id="card5" style="display: none;">
+    <div class="card">
+        <div class="card-header text-white">
+           Questionnaires
+        </div>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="0"
+                 aria-valuemin="0" aria-valuemax="100" style="width:0%">
+                <div class="progress-text" style="margin-left: 4px">0%</div>
+            </div>
+        </div>
+        <div class="card-body">
+            <p class="card-text">
+                {% if framing == 0 %}
+                  Control Group: Thank you for your answers so far. Please proceed with the survey.
+                {% endif %}
+                {% if framing == 1 %}
+                  pos framing: Thank you for your answers so far. You did exceptionally well in the first round.
+                    If you continue like this, you will help us a lot with your contribution to the advancement of science.
+                    Please proceed with the survey.
+                {% endif %}
+                {% if framing == 2 %}
+                  neg Framing: Unfortunately, your rate of correct answers was not very high in the first round.
+                    We still appreciate your effort! Please proceed with the survey.
+                {% endif %}
+            </p>
+            <p class="card-text">
+               With the questionnaire on the next page we would like to get your opinion on the previous tasks.
+               Please answer the questions as well as you can.
+            </p>
+        </div>
+        <div class="modal-footer" id="btn-next">
+            <a class="btn btn-next" onclick="displayCards(); fillProgress()"> Continue</a>
+        </div>
     </div>
 </div>
-<div class="card-body">
-    <p class="card-text">
-        Intrinsic Motivation Inventory
-    </p>
-    <br>
-    <p id="errorIMIpre" class="error">
-    <div class="wrap">
-        {% for question in imi %}
-        <label class="statement">{{ question }}</label>
-        <p id="errorIMIpre{{ forloop.counter }}" class="error_sub error_question"></p>
-        <ul class='likert'>
-            <li>
-                <input type="radio" name="scalePre{{ forloop.counter }}" value="1">
-                <label>Not true at all</label>
-            </li>
-            <li>
-                <input type="radio" name="scalePre{{ forloop.counter }}" value="2">
-            </li>
-            <li>
-                <input type="radio" name="scalePre{{ forloop.counter }}" value="3">
-            </li>
-            <li>
-                <input type="radio" name="scalePre{{ forloop.counter }}" value="4">
-                <label>Somewhat true</label>
-            </li>
-            <li>
-                <input type="radio" name="scalePre{{ forloop.counter }}" value="5">
-            </li>
-            <li>
-                <input type="radio" name="scalePre{{ forloop.counter }}" value="6">
-            </li>
-            <li>
-                <input type="radio" name="scalePre{{ forloop.counter }}" value="7">
-                <label>Very true</label>
-            </li>
-        </ul>
-        {% endfor %}
+<div class="container" id="card6" style="display: none;">
+    <div class="card">
+        <div class="card-header text-white">
+            IMI
+        </div>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="0"
+                 aria-valuemin="0" aria-valuemax="100" style="width:0%">
+                <div class="progress-text" style="margin-left: 4px">0%</div>
+            </div>
+        </div>
+        <div class="card-body">
+            <p class="card-text">
+                Intrinsic Motivation Inventory
+            </p>
+            <br>
+            <div id="errorIMIpre" class="error"></div>
+            <div class="wrap">
+                {% for question in imi %}
+                    <label class="statement">{{ question }}</label>
+                    <div id="errorIMIpre{{ forloop.counter }}" class="error_sub error_question"></div>
+                    <ul class='likert'>
+                        <li>
+                            <input type="radio" name="scalePre{{ forloop.counter }}" value="1">
+                            <label>Not true at all</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="scalePre{{ forloop.counter }}" value="2">
+                        </li>
+                        <li>
+                            <input type="radio" name="scalePre{{ forloop.counter }}" value="3">
+                        </li>
+                        <li>
+                            <input type="radio" name="scalePre{{ forloop.counter }}" value="4">
+                            <label>Somewhat true</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="scalePre{{ forloop.counter }}" value="5">
+                        </li>
+                        <li>
+                            <input type="radio" name="scalePre{{ forloop.counter }}" value="6">
+                        </li>
+                        <li>
+                            <input type="radio" name="scalePre{{ forloop.counter }}" value="7">
+                            <label>Very true</label>
+                        </li>
+                    </ul>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="modal-footer" id="btn-next">
+            <a class="btn btn-next" onclick="saveQuestionnaire('pre', 'IMI');"> Continue</a>
+        </div>
     </div>
 </div>
+
+
 
 
