--- a/SinglePage/templates/cards/task_main.html
+++ b/SinglePage/templates/cards/task_main.html
@@ -11,20 +11,20 @@
             </div>
         </div>
         <div class="card-body">
-            <p class="card-text">
-                {% if framing == 0 %}
-                  Control Group: Thank you for your answers so far. Please proceed with the second half of this survey.
-                {% endif %}
-                {% if framing == 1 %}
-                  pos framing: Thank you for your answers so far. You did exceptionally well in the first round.
-                    If you continue like this, you will help us a lot with your contribution to the advancement of science.
-                    Please proceed with the second half of this survey.
-                {% endif %}
-                {% if framing == 2 %}
-                  neg Framing: Unfortunately, your rate of correct answers was not very high in the first round.
-                    We still appreciate your effort! Please proceed with the second half of this survey.
-                {% endif %}
-            </p>
+{#            <p class="card-text">#}
+{#                {% if framing == 0 %}#}
+{#                  Control Group: Thank you for your answers so far. Please proceed with the second half of this survey.#}
+{#                {% endif %}#}
+{#                {% if framing == 1 %}#}
+{#                  pos framing: Thank you for your answers so far. You did exceptionally well in the first round.#}
+{#                    If you continue like this, you will help us a lot with your contribution to the advancement of science.#}
+{#                    Please proceed with the second half of this survey.#}
+{#                {% endif %}#}
+{#                {% if framing == 2 %}#}
+{#                  neg Framing: Unfortunately, your rate of correct answers was not very high in the first round.#}
+{#                    We still appreciate your effort! Please proceed with the second half of this survey.#}
+{#                {% endif %}#}
+{#            </p>#}
             <p class="card-text">
                 The questions on the next pages are again different kinds of cognitive ability tasks.
                 Please answer the questions as well as you can without using external instruments or taking notes.
@@ -48,7 +48,7 @@
         </div>
         <div class="card-body">
             <div class="container">
-                <p id="errorm1" class="error">
+                <div id="errorm1" class="error"></div>
                 {% for task in m1 %}
                     <p class="card-text">{{ task.description }}</p>
                     {% if task.details|length > 0 %}
@@ -61,7 +61,7 @@
                         {% endwith %}
                         <br><br>
                     {% endif %}
-                    <p id="errorm1{{ task.pk }}" class="error_sub">
+                    <div id="errorm1{{ task.pk }}" class="error_sub"></div>
                     <div class="row">
                         {% for arr in array_m1|dict_key:task.pk %}
                             <div class="col-xs-12 col-sm-3 radiobtn">
@@ -97,7 +97,7 @@
         </div>
         <div class="card-body">
             <div class="container">
-                <p id="errorm2" class="error">
+                <div id="errorm2" class="error"></div>
                 {% for task in m2 %}
                     <p class="card-text">{{ task.description }}</p>
                     {% if task.details|length > 0 %}
@@ -110,7 +110,7 @@
                         {% endwith %}
                         <br><br>
                     {% endif %}
-                    <p id="errorm2{{ task.pk }}" class="error_sub">
+                    <div id="errorm2{{ task.pk }}" class="error_sub"></div>
                     <div class="row">
                         {% for arr in array_m2|dict_key:task.pk %}
                             <div class="col-xs-12 col-sm-3 radiobtn">
