--- a/SinglePage/templates/legal_notice.html
+++ b/SinglePage/templates/legal_notice.html
@@ -2,7 +2,7 @@
     <b>Deutsches Forschungszentrum für Künstliche Intelligenz GmbH, DFKI</b> <br><br>
 
     <b>E-Mail Kontakt:</b> <br>
-    florian.daiber@dfki.de <br><br>
+    s8juschu@stud.uni-saarland.de <br><br>
 
     <b>Briefadresse</b><br>
     Postfach 20 80<br>
@@ -33,52 +33,15 @@
     Tel: +49 (0)30 / 238 95-0<br><br>
 
     <b>Vertretungsberechtigte Geschäftsführer</b><br>
-    Prof. Dr. Dr. h.c. mult. Wolfgang Wahlster (Vorsitzender),<br>
-    Dr. Walter Olthoff<br><br>
+    Prof. Dr. Antonio Krüger (Vorsitzender)<br>
+    Helmut Ditzer<br><br>
 
     <b>Vorsitzender des Aufsichtsrates</b><br>
-    Prof. Dr. h.c. Hans A. Aukes<br><br>
+    Dr. Gabriël Clemens<br><br>
 
     Registergericht:Amtsgericht Kaiserslautern<br>
     Registernummer: HRB 2313<br><br>
 
     ID-Nummer: DE 148 646 973<br><br>
-
-    -----------------------------------------
-
-</p>
-<p class="abouttext">
-    <b>Allgemeines</b><br><br>
-
-    Die folgende Studie ist Teil eines Forschungsprojekts am Deutschen Forschungszentrum für Künstliche Intelligenz (DFKI) und der Universität des Saarlandes (UdS).<br><br>
-    <b>Freiwillige Teilnahme und Einwilligung</b><br><br>
-
-    Die Teilnahme an der Studie ist freiwillig. Die Einwilligung zur Teilnahme an dieser Studie kann jederzeit und ohne Angabe von Gründen bis zum Ende der Datenerhebung widerrufen werden, indem die Umfrage beendet wird (ein entsprechender Button ist auf der Webseite vorhanden) oder das Browserfenster geschlossen wird. Alle unvollständigen Datensätze werden von uns gelöscht. Nach dem Ende der Datenerhebung können die gesetzlichen Rechte auf Widerruf, Auskunft, Berichtigung, Sperrung und Löschung nicht mehr wahrgenommen werden, weil die Daten nicht mehr der betroffenen Person zugeordnet werden können.<br><br>
-    <b>Welche Daten erfassen wir?</b><br><br>
-
-    Nach der Einwilligung zur Datenerfassung, werden folgende Daten erhoben und ausschließlich anonymisiert verarbeitet:<br><br>
-
-    <b>Eingaben in der Onlineumfrage</b><br><br>
-
-    Aus technischen Gründen werden u.a. folgende Daten, die vom Internet-Browser an uns bzw. an unseren Webspace-Provider übermittelt werden, erfasst (sogenannte Serverlogfiles):<br><br>
-
-        Browsertyp und -version<br>
-        verwendetes Betriebssystem<br>
-        Webseite, von die zuvor besucht wurde (Referrer URL)<br>
-        Datum und Uhrzeit des Zugriffs<br>
-        Die Internet Protokoll (IP)-Adresse.<br><br>
-
-    Diese anonymen Daten werden nicht mit den Umfragedaten zusammengeführt. Auf dieser Webseite verwenden wir sogenannte Cookies. Cookies sind kleine Dateien, die von Ihrem Webbrowser gespeichert werden. Die auf unserer Website verwendeten Cookies richten auf Ihrem Rechner keinen Schaden an und enthalten keine Schadsoftware. Sie ermöglichen eine benutzerfreundliche und effektive Nutzung dieser Webseite. Wir nutzen permanente Cookies mit einer Gültigkeitsdauer von höchstens 365 Tagen. Wir verwenden diese Cookies ausschließlich dazu, eine mehrfache Teilnahme auszuschließen.<br><br>
-    <b>Anonymisierung der Daten</b><br><br>
-
-    Mit der Übertragung der erhobenen Daten an unseren Server, erfolgt eine Anonymisierung, die eine Zuordnung der erhobenen Daten zu einer Person praktisch unmöglich macht, sofern keine persönlichen Daten in Freitextfeldern eingeeben werden.<br><br>
-    <b>Wofür nutzen wir die erhobenen Daten?</b><br><br>
-
-    Die Ergebnisse und Daten werden ausschließlich zu wissenschaftlichen Forschungszwecken verwendet und sie werden im Rahmen der Abschlussarbeit und als wissenschaftliche Publikation dieser Studie in anonymisierter Form veröffentlicht. Darüber hinaus können sie in anonymer Form für andere wissenschaftliche Forschungszwecke weiterverarbeitet werden.<br><br>
-    <b>Ansprechpartner</b><br><br>
-
-    Verantwortlich für die Durchführung dieser Studie ist das DFKI. Ansprechpartner am DFKI ist Florian Daiber (florian.daiber@dfki.de). Wenn Sie Fragen haben, die diese Datenschutzerklärung nicht beantwortet, oder wenn Sie weitere Informationen zum Datenschutz wünschen, wenden Sie sich bitte an unseren Datenschutzbeauftragten (datenschutz@dfki.de).<br><br>
-    <b>Recht auf Beschwerde</b><br><br>
-    Sie haben das Recht auf Beschwerde bei einer Aufsichtsbehörde, wenn Sie der Ansicht sind, dass die Verarbeitung Ihrer personenbezogenen Daten gegen gesetzliche Datenschutzvorschriften verstößt.<br><br>
 
 </p>
