Adapt syle of IMI

--- a/SinglePage/templates/cards/imi_main.html
+++ b/SinglePage/templates/cards/imi_main.html
@@ -1,7 +1,7 @@
 <div class="container" id="card10" style="display: none;">
     <div class="card">
         <div class="card-header text-white">
-           Questionnaires
+           Questionnaire 2
         </div>
         <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="0"
@@ -23,7 +23,7 @@
 <div class="container" id="card11" style="display: none;">
     <div class="card">
         <div class="card-header text-white">
-            IMI
+            Questionnaire 2
         </div>
         <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="0"
@@ -32,14 +32,13 @@
             </div>
         </div>
         <div class="card-body">
-            <p class="card-text">
-                Intrinsic Motivation Inventory
-            </p>
-            <br>
+{#            <p class="card-text">#}
+{#                Intrinsic Motivation Inventory#}
+{#            </p>#}
             <div id="errorIMImain" class="error"></div>
             <div class="wrap">
                 {% for question in imi %}
-                <label class="statement">{{ question }}</label>
+                <label class="statement">{{ forloop.counter }}. {{ question }}</label>
                 <div id="errorIMImain{{ forloop.counter }}" class="error_sub error_question"></div>
                 <ul class='likert'>
                     <li>
