Adapt start and end card. Framing in pre study after questionnaire. More gender options

--- a/SinglePage/templates/base.html
+++ b/SinglePage/templates/base.html
@@ -39,7 +39,7 @@
                 <!-- Modal -->
                 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
                      aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
+                    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="exampleModalLabel">Data Protection Notice</h5>
@@ -62,7 +62,7 @@
                 <!-- Modal -->
                 <div class="modal fade" id="legalModal" tabindex="-1" role="dialog"
                      aria-labelledby="legalModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
+                    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="legalModalLabel">Legal Notice</h5>
