--- a/SinglePage/templates/cards/personal_info.html
+++ b/SinglePage/templates/cards/personal_info.html
@@ -34,5 +34,11 @@
                 Other
             </label>
         </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="gender" id="private">
+            <label class="form-check-label" for="private">
+                Prefer not to say.
+            </label>
+        </div>
     </p>
 </div>
