--- a/SinglePage/templates/cards/start.html
+++ b/SinglePage/templates/cards/start.html
@@ -6,7 +6,8 @@
         Thank you for participating in our study. In this survey, we would like to measure your cognitive abilities
         and our experience while performing the tasks.
         This survey consists of two parts. In each part, you have to solve 8 cognitive ability tasks, followed by a questionnaire.
-        It will take about XYZ minutes to complete the survey. The goal of the study is to identify XYZ.<br><br>
+        It will take about 15 minutes to complete the survey. The goal of the study is to identify to which extent your
+        cognitive abilities match your reported experience while performing the tasks.<br><br>
 
         Your data will be stored and processed anonymously.
         More information on data protection can be found in the <a href="#" data-toggle="modal" data-target="#exampleModal">Data Protection Notice</a>.
