--- a/SinglePage/templates/cards/task_main.html
+++ b/SinglePage/templates/cards/task_main.html
@@ -11,20 +11,21 @@
             </div>
         </div>
         <div class="card-body">
-{#            <p class="card-text">#}
-{#                {% if framing == 0 %}#}
-{#                  Control Group: Thank you for your answers so far. Please proceed with the second half of this survey.#}
-{#                {% endif %}#}
-{#                {% if framing == 1 %}#}
-{#                  pos framing: Thank you for your answers so far. You did exceptionally well in the first round.#}
-{#                    If you continue like this, you will help us a lot with your contribution to the advancement of science.#}
-{#                    Please proceed with the second half of this survey.#}
-{#                {% endif %}#}
-{#                {% if framing == 2 %}#}
-{#                  neg Framing: Unfortunately, your rate of correct answers was not very high in the first round.#}
-{#                    We still appreciate your effort! Please proceed with the second half of this survey.#}
-{#                {% endif %}#}
-{#            </p>#}
+            <p class="card-text">
+                {% if framing == 0 %}
+                  Control Group: Thank you for your answers so far. Please proceed with the survey.
+                {% endif %}
+                {% if framing == 1 %}
+                  pos framing: Thank you for your answers so far. You performed well in the first round.
+                    If you continue like this, you will perform better than most participants.
+                    Please proceed with the survey.
+                {% endif %}
+                {% if framing == 2 %}
+                  neg Framing: Thank you for your answers so far. You performed poorly in the first round.
+                    If you continue like this, you will perform worse than most participants.
+                    Please proceed with the survey.
+                {% endif %}
+            </p>
             <p class="card-text">
                 The questions on the next pages are again different kinds of cognitive ability tasks.
                 Please answer the questions as well as you can without using external instruments or taking notes.
