--- a/SinglePage/templates/cards/imi_pre.html
+++ b/SinglePage/templates/cards/imi_pre.html
@@ -1,7 +1,7 @@
 <div class="container" id="card5" style="display: none;">
     <div class="card">
         <div class="card-header text-white">
-           Questionnaires
+           Questionnaire 1
         </div>
         <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="0"
@@ -26,7 +26,7 @@
 {#                {% endif %}#}
 {#            </p>#}
             <p class="card-text">
-               With the questionnaire on the next page we would like to get your opinion on the previous tasks.
+               With the questionnaire on the next two pages we would like to get your opinion on the previous tasks.
                Please answer the questions as well as you can.
             </p>
         </div>
@@ -47,9 +47,6 @@
             </div>
         </div>
         <div class="card-body">
-{#            <p class="card-text">#}
-{#                Questionnaire#}
-{#            </p>#}
             <div id="errorIMIpre" class="error"></div>
             <div class="wrap">
                 {% for question in imi %}
