--- a/SinglePage/templates/cards/imi_main.html
+++ b/SinglePage/templates/cards/imi_main.html
@@ -1,4 +1,4 @@
-<div class="container" id="card10" style="display: none;">
+<div class="container" id="card11" style="display: none;">
     <div class="card">
         <div class="card-header text-white">
            Questionnaire 2
@@ -11,7 +11,7 @@
         </div>
         <div class="card-body">
             <p class="card-text">
-               With the questionnaire on the next page, we would again like to get your opinion on the previous 8 tasks.
+               With the questionnaire on the two next pages, we would again like to get your opinion on the previous 8 tasks.
                Please answer the questions as well as you can.
             </p>
         </div>
@@ -20,7 +20,7 @@
         </div>
     </div>
 </div>
-<div class="container" id="card11" style="display: none;">
+<div class="container" id="card12" style="display: none;">
     <div class="card">
         <div class="card-header text-white">
             Questionnaire 2
@@ -32,9 +32,6 @@
             </div>
         </div>
         <div class="card-body">
-{#            <p class="card-text">#}
-{#                Intrinsic Motivation Inventory#}
-{#            </p>#}
             <div id="errorIMImain" class="error"></div>
             <div class="wrap">
                 {% for question in imi %}
