--- a/SinglePage/templates/index.html
+++ b/SinglePage/templates/index.html
@@ -27,8 +27,10 @@
 </div>
 {% include 'cards/task_pre.html' %}
 {% include 'cards/imi_pre.html' %}
+{% include 'cards/panas_pre.html' %}
 {% include 'cards/task_main.html' %}
 {% include 'cards/imi_main.html' %}
+{% include 'cards/panas_main.html' %}
 {#<div class="container" id="card12" style="display: none;">#}
 {#    <div class="card">#}
 {#         {% include 'cards/voluntary.html' %}#}
@@ -45,7 +47,7 @@
 {#        </div>#}
 {#    </div>#}
 {#</div>#}
-<div class="container" id="card12" style="display: none;">
+<div class="container" id="card14" style="display: none;">
     <div class="card">
          {% include 'cards/end.html' %}
     </div>
